# AgenC

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  collab_protocol.py  convergecast.py  emitter-config.json  emitter.py  go.mod  node-config.json  test_convergecast.py  worker1-config.json  worker1.py  worker2-config.json  worker2.py  worker3-config.json  worker3.py  worker4-config.json  worker4.py  worker_core.py  worker_image_merge.py  worker_telemetry.py
agenc-api/: .env.example  arbiter.py  bounty_escrow_abi.json  bounty_fsm.py  config.py  main.py  payment.py  pyproject.toml  reputation.py  sse_publisher.py
agenc-api/agent_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agenc-api/tests/: test_arbiter.py  test_bounty_fsm.py  test_sse_publisher.py  test_telemetry.py
agenc-frontend/: CLAUDE.md  README.md  package-lock.json  package.json
api/: a2a.go  handler_test.go  mcp.go  mcp_test.go  recv.go  recv_test.go  send.go  send_test.go  tcp_helpers.go
contracts/: BountyEscrow.sol  deploy.py
deploy/: agenc-api.service  agenc-frontend.service  agenc-mcp-shared-memory.service  agenc-mcp-web-search.service  axl-worker3.service  axl-worker4.service  env.template  mcp-router.service  nginx.conf  setup.sh  worker1.service  worker2.service  worker3.service  worker4.service
docs/: agenc.md  deployment.md  examples.md  integrations.md
integrations/: pyproject.toml
memory/: MEMORY.md  architecture_stack.md  axl_layer.md  bounty_protocol.md  hackathon_context.md  project_overview.md  ui_ux_theme.md
python-client/: client.py  (+1 more)
(+55 files in other folders)
