[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "arbiter", "config", "reputation"]

[project]
name = "agent-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "openai>=1.40.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.0.0",
    "requests>=2.33.1",
    "uvicorn>=0.46.0",
    "web3>=7.0",
    "py-solc-x>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
